--- a/test.yml
+++ b/test.yml
@@ -6,7 +6,7 @@
     date_Y: "{{ lookup('pipe', 'date +%Y') }}"
     date_M: "{{ lookup('pipe', 'date +%m') }}"
     date_D: "{{ lookup('pipe', 'date +%m%d-%H%M') }}"
-    backuppath: "/tmp/swbackups/{{ date_Y }}/{{ date_M }}"
+    backuppath: "/backup"
 
   tasks:
     - name: Create backup dir
@@ -24,13 +24,13 @@
     - name : copy switch config backup to backup directory
       copy:
        src: "{{ backup_location.backup_path }}"
-       dest: "/{{ backuppath }}/{{ inventory_hostname }}_{{ ansible_host }}.cfg"
+       dest: "{{ inventory_hostname }}_{{ ansible_host }}.cfg"
       when: ansible_network_os == 'ios'
 
     - name: Backup switch (nxos)
       nxos_config:
         backup: yes
         backup_options:
-          filename: "/{{ backuppath }}/{{ inventory_hostname }}_{{ ansible_host }}.cfg"
+          filename: "{{ inventory_hostname }}_{{ ansible_host }}.cfg"
           dir_path: "{{ backuppath }}"
       when: ansible_network_os == 'nxos'
