--- a/test.yml
+++ b/test.yml
@@ -1,30 +1,15 @@
 ---
 - hosts: hqswitch
-  gather_facts: no
+  gather_facts: yes
 
   vars:
-    date_Y: "{{ lookup('pipe', 'date +%Y') }}"
-    date_M: "{{ lookup('pipe', 'date +%m') }}"
-    date_D: "{{ lookup('pipe', 'date +%m%d-%H%M') }}"
     backuppath: "/backup"
 
   tasks:
-    - name: Create backup dir
-      file:
-        path: "{{ backuppath }}"
-        state: directory
-        recurse: yes
-
     - name: Backup switch (ios)
       ios_config:
         backup: yes
       register: backup_location
-      when: ansible_network_os == 'ios'
-
-    - name : copy switch config backup to backup directory
-      copy:
-       src: "{{ backup_location.backup_path }}"
-       dest: "{{ inventory_hostname }}_{{ ansible_host }}.cfg"
       when: ansible_network_os == 'ios'
 
     - name: Backup switch (nxos)
