--- a/test.yml
+++ b/test.yml
@@ -12,6 +12,12 @@
       register: backup_location
       when: ansible_network_os == 'ios'
 
+    - name : copy switch config backup to backup directory
+      copy:
+       src: "{{ backup_location.backup_path }}"
+       dest: "/{{ backuppath }}/{{ inventory_hostname }}_{{ ansible_host }}.cfg"
+      when: ansible_network_os == 'ios'
+
     - name: Backup switch (nxos)
       nxos_config:
         backup: yes
