--- a/iosbackup.yaml
+++ b/iosbackup.yaml
@@ -1,10 +1,8 @@
 ---
 - hosts: all
-  gather_facts: no
+  gather_facts: yes
 
   tasks:
     - name: Backup switch (ios)
       ios_config:
         backup: yes
-      register: backup_location
-      when: ansible_network_os == 'ios'
