--- a/iosbackup.yaml
+++ b/iosbackup.yaml
@@ -4,6 +4,6 @@
   gather_facts: yes
   tasks:
     - name: Backup switch (ios)
-      ios_config:
-         backup: yes
-      register: backup_location
+      cisco.ios.ios_config:
+        backup: yes
+        src: ios_template.j2
