--- a/iosbackup.yaml
+++ b/iosbackup.yaml
@@ -4,6 +4,6 @@
   gather_facts: no
   tasks:
     - name: Backup switch (ios)
-      cisco.ios.ios_config:
+      ios_config:
         backup: yes
         src: ios_template.j2
